# postgressql

./: configure  configure.ac  meson.build
config/: c-compiler.m4
contrib/: meson.build
contrib/test_crc32c/: meson.build  test_crc32c--1.0.sql  test_crc32c.c  test_crc32c.control
contrib/test_crc32c/expected/: test_crc32c.out
contrib/test_crc32c/sql/: test_crc32c.sql
src/include/: pg_config.h.in  pg_cpu.h
src/include/port/: pg_crc32c.h
src/port/: Makefile  meson.build  pg_crc32c_avx512.c  pg_crc32c_sse42.c  pg_crc32c_sse42_choose.c  pg_crc32c_x86_choose.c  pg_hw_feat_check.c  pg_popcount_avx512.c
src/test/modules/: meson.build
src/test/modules/test_crc32c/: Makefile  meson.build  test_crc32c--1.0.sql  test_crc32c.c
